--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,9 @@ einops>=0.7.0
 transformers_stream_generator==0.0.4
 vllm==0.2.7; sys_platform == "linux"
 
+# flash-attn>=2.4.3 # For Orion-14B-Chat and Qwen-14B-Chat
+
+
 # optional document loaders
 
 #rapidocr_paddle[gpu]>=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
