--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,15 +1,14 @@
 torch~=2.1.2
 torchvision~=0.16.2
 torchaudio~=2.1.2
-xformers==0.0.23.post1
+xformers>=0.0.23.post1
 transformers==4.36.2
 sentence_transformers==2.2.2
-
 langchain==0.0.354
 langchain-experimental==0.0.47
 pydantic==1.10.13
 fschat==0.2.35
-openai~=1.7.1
+openai~=1.9.0
 fastapi~=0.108.0
 sse_starlette==1.8.2
 nltk>=3.8.1
@@ -18,7 +17,7 @@ starlette~=0.32.0
 unstructured[all-docs]==0.11.0
 python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
-faiss-cpu~=1.7.4  # `conda install faiss-gpu -c conda-forge` if you want to accelerate with gpus
+faiss-cpu~=1.7.4
 accelerate~=0.24.1
 spacy~=3.7.2
 PyMuPDF~=1.23.8
@@ -26,7 +25,7 @@ rapidocr_onnxruntime==1.3.8
 requests~=2.31.0
 pathlib~=1.0.1
 pytest~=7.4.3
-numexpr~=2.8.6 # max version for py38
+numexpr~=2.8.6
 strsimpy~=0.2.1
 markdownify~=0.11.6
 tiktoken~=0.5.2
@@ -39,29 +38,18 @@ transformers_stream_generator==0.0.4
 vllm==0.2.7; sys_platform == "linux"
 httpx==0.26.0
 llama-index
-# flash-attn>=2.4.3 # For Orion-14B-Chat and Qwen-14B-Chat
-
-# optional document loaders
-
-# rapidocr_paddle[gpu]>=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
-jq==1.6.0 # for .json and .jsonl files. suggest `conda install jq` on windows
-beautifulsoup4~=4.12.2 # for .mhtml files
+jq==1.6.0
+beautifulsoup4~=4.12.2
 pysrt~=1.1.2
-
-# Online api libs dependencies
-
-# zhipuAI sdk is not supported on our platform, so use http instead
-dashscope==1.13.6 # qwen
-# volcengine>=1.0.119 # fangzhou
-
-# uncomment libs if you want to use corresponding vector store
-# pymilvus>=2.3.4
-# psycopg2==2.9.9
-# pgvector>=0.2.4
-
-# Agent and Search Tools
-
+dashscope==1.13.6
 arxiv~=2.1.0
 youtube-search~=2.1.2
 duckduckgo-search~=3.9.9
 metaphor-python~=0.1.23
+
+# volcengine>=1.0.119
+# pymilvus>=2.3.4
+# psycopg2==2.9.9
+# pgvector>=0.2.4
+# flash-attn>=2.4.3 # For Orion-14B-Chat and Qwen-14B-Chat
+# rapidocr_paddle[gpu]>=1.3.0.post5
