--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ fastapi~=0.109.0
 sse_starlette~=1.8.2
 nltk~=3.8.1
 uvicorn~=0.24.0.post1
-starlette~=0.32.0
+starlette~=0.35.0
 unstructured[all-docs]~=0.12.0
-python-magic-bin; sys_platform ~= 'win32'
+python-magic-bin; sys_platform == 'win32'
 SQLAlchemy~=2.0.25
 faiss-cpu~=1.7.4
 accelerate~=0.24.1
@@ -35,7 +35,7 @@ numpy~=1.24.4
 pandas~=2.0.3
 einops~=0.7.0
 transformers_stream_generator~=0.0.4
-vllm~=0.2.7; sys_platform ~= "linux"
+vllm~=0.2.7; sys_platform == "linux"
 jq~=1.6.0
 beautifulsoup4~=4.12.2
 pysrt~=1.1.2
@@ -46,7 +46,7 @@ dashscope~=1.13.6 # qwen
 # psycopg2~=2.9.9
 # pgvector~=0.2.4
 # flash-attn~=2.4.3 # For Orion-14B-Chat and Qwen-14B-Chat
-#rapidocr_paddle[gpu]~=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
+rapidocr_paddle[gpu]~=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
 arxiv~=2.1.0
 youtube-search~=2.1.2
 duckduckgo-search~=3.9.9
@@ -59,3 +59,4 @@ streamlit-modal~=0.1.0
 streamlit-aggrid~=0.3.4.post3
 httpx~=0.26.0
 watchdog~=3.0.0
+jwt~=1.3.1
