--- a/requirements.txt
+++ b/requirements.txt
@@ -36,10 +36,12 @@ pandas==2.0.3
 einops==0.7.0
 transformers_stream_generator==0.0.4
 vllm==0.2.7; sys_platform == "linux"
-jq==1.6.0
-beautifulsoup4==4.12.2
-pysrt==1.1.2
-dashscope==1.13.6 # qwen
+llama-index==0.9.35
+
+# jq==1.6.0
+# beautifulsoup4==4.12.2
+# pysrt==1.1.2
+# dashscope==1.13.6 # qwen
 # volcengine==1.0.119 # fangzhou
 # uncomment libs if you want to use corresponding vector store
 # pymilvus==2.3.4
@@ -47,6 +49,7 @@ dashscope==1.13.6 # qwen
 # pgvector==0.2.4
 # flash-attn==2.4.3 # For Orion-14B-Chat and Qwen-14B-Chat
 # rapidocr_paddle[gpu]==1.3.0.post5 # gpu accelleration for ocr of pdf and image files
+
 arxiv==2.1.0
 youtube-search==2.1.2
 duckduckgo-search==3.9.9
