--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -19,6 +19,8 @@ rapidocr_onnxruntime~=1.3.8
 requests~=2.31.0
 pathlib~=1.0.1
 pytest~=7.4.3
+llama-index==0.9.35
+
 dashscope==1.13.6
 arxiv~=2.1.0
 youtube-search~=2.1.2
