--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ transformers_stream_generator==0.0.4
 vllm==0.2.7; sys_platform == "linux"
 llama-index==0.9.35
 
-# jq==1.6.0
+#jq==1.6.0
 # beautifulsoup4==4.12.2
 # pysrt==1.1.2
 # dashscope==1.13.6 # qwen
@@ -47,8 +47,9 @@ llama-index==0.9.35
 # pymilvus==2.3.4
 # psycopg2==2.9.9
 # pgvector==0.2.4
-# flash-attn==2.4.3 # For Orion-14B-Chat and Qwen-14B-Chat
-# rapidocr_paddle[gpu]==1.3.0.post5 # gpu accelleration for ocr of pdf and image files
+#flash-attn==2.4.2 # For Orion-14B-Chat and Qwen-14B-Chat
+#autoawq==0.1.8 # For Int4
+#rapidocr_paddle[gpu]==1.3.11 # gpu accelleration for ocr of pdf and image files
 
 arxiv==2.1.0
 youtube-search==2.1.2
