embeddings模块集成openai plugins插件，使用统一api调用

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,5 @@ test.py
 configs/*.py
 
 
+/knowledge_base/samples/content/202311-D平台项目工作大纲参数，人员中间库表结构说明V1.1(1).docx
+/knowledge_base/samples/content/imi_temeplate.txt
