--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ llama-index==0.9.35
 # pymilvus==2.3.4
 # psycopg2==2.9.9
 # pgvector==0.2.4
+# chromadb==0.4.13
 #flash-attn==2.4.2 # For Orion-14B-Chat and Qwen-14B-Chat
 #autoawq==0.1.8 # For Int4
 #rapidocr_paddle[gpu]==1.3.11 # gpu accelleration for ocr of pdf and image files
