--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -38,6 +38,7 @@ transformers_stream_generator==0.0.4
 vllm==0.2.7; sys_platform == "linux"
 httpx==0.26.0
 llama-index==0.9.35
+pyjwt==2.8.0
 
 # jq==1.6.0
 # beautifulsoup4~=4.12.2
