--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -6,7 +6,7 @@ openai~=1.9.0
 fastapi~=0.109.0
 sse_starlette~=1.8.2
 nltk~=3.8.1
-uvicorn~=0.24.0.post1
+uvicorn>=0.27.0.post1
 starlette~=0.35.0
 unstructured[all-docs]~=0.12.0
 python-magic-bin; sys_platform == 'win32'
@@ -33,3 +33,7 @@ watchdog~=3.0.0
 # psycopg2==2.9.9
 # pgvector>=0.2.4
 # chromadb==0.4.13
+# jq==1.6.0
+# beautifulsoup4~=4.12.2
+# pysrt~=1.1.2
+
