--- a/requirements.txt
+++ b/requirements.txt
@@ -44,10 +44,11 @@ llama-index==0.9.35
 # dashscope==1.13.6 # qwen
 # volcengine==1.0.119 # fangzhou
 # uncomment libs if you want to use corresponding vector store
-# pymilvus==2.3.4
+# pymilvus==2.3.6
 # psycopg2==2.9.9
-# pgvector==0.2.4
+# pgvector>=0.2.4
 # chromadb==0.4.13
+
 #flash-attn==2.4.2 # For Orion-14B-Chat and Qwen-14B-Chat
 #autoawq==0.1.8 # For Int4
 #rapidocr_paddle[gpu]==1.3.11 # gpu accelleration for ocr of pdf and image files
