--- a/requirements.txt
+++ b/requirements.txt
@@ -57,12 +57,15 @@ arxiv==2.1.0
 youtube-search==2.1.2
 duckduckgo-search==3.9.9
 metaphor-python==0.1.23
+
 streamlit==1.30.0
 streamlit-option-menu==0.3.12
 streamlit-antd-components==0.3.1
 streamlit-chatbox==1.1.11
 streamlit-modal==0.1.0
 streamlit-aggrid==0.3.4.post3
+
 httpx==0.26.0
+httpx_sse==0.4.0
 watchdog==3.0.0
 pyjwt==2.8.0
