--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,38 @@ youtube-search==2.1.2
 duckduckgo-search==3.9.9
 metaphor-python==0.1.23
 
+httpx==0.26.0
+httpx_sse==0.4.0
+watchdog==3.0.0
+pyjwt==2.8.0
+elasticsearch
+numexpr>=2.8.8
+strsimpy>=0.2.1
+markdownify>=0.11.6
+tqdm>=4.66.1
+websockets>=12.0
+numpy>=1.26.3
+pandas~=2.1.4
+pydantic<2
+httpx[brotli,http2,socks]>=0.25.2
+
+# optional document loaders
+
+# rapidocr_paddle[gpu]>=1.3.0.post5
+# jq>=1.6.0
+# html2text
+# beautifulsoup4>=4.12.2
+# pysrt>=1.1.2
+
+# Agent and Search Tools
+
+# arxiv>=2.1.0
+# youtube-search>=2.1.2
+# duckduckgo-search>=4.1.0
+# metaphor-python>=0.1.23
+
+# WebUI requirements
+
 streamlit==1.30.0
 streamlit-option-menu==0.3.12
 streamlit-antd-components==0.3.1
@@ -48,7 +80,3 @@ streamlit-chatbox==1.1.11
 streamlit-modal==0.1.0
 streamlit-aggrid==0.3.4.post3
 
-httpx==0.26.0
-httpx_sse==0.4.0
-watchdog==3.0.0
-pyjwt==2.8.0
