--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ numpy>=1.26.3
 pandas~=2.1.4
 pydantic==1.10.14
 httpx[brotli,http2,socks]>=0.25.2
-
+python-multipart==0.0.9
 # optional document loaders
 
 # rapidocr_paddle[gpu]>=1.3.0.post5
