使用poetry管理项目

--- a/chatchat/configs/kb_config.py.example
+++ b/chatchat/configs/kb_config.py.example
@@ -51,7 +51,7 @@ KB_INFO = {
 # 通常情况下不需要更改以下内容
 
 # 知识库默认存储路径
-KB_ROOT_PATH = os.path.join(DATA_PATH, "knowledge_base")
+KB_ROOT_PATH = os.path.join(DATA_PATH, "data/knowledge_base")
 if not os.path.exists(KB_ROOT_PATH):
     os.mkdir(KB_ROOT_PATH)
 
