dev分支解决pydantic版本冲突问题，增加ollama配置，支持ollama会话和向量接口 (#3508)
* dev分支解决pydantic版本冲突问题，增加ollama配置，支持ollama会话和向量接口
1、因dev版本的pydantic升级到了v2版本，由于在class History(BaseModel)中使用了from server.pydantic_v1，而fastapi的引用已变为pydantic的v2版本，所以fastapi用v2版本去校验用v1版本定义的对象，当会话历史histtory不为空的时候，会报错：TypeError: BaseModel.validate() takes 2 positional arguments but 3 were given。经测试，解方法为在class History(BaseModel)中也使用v2版本即可;
2、配置文件参照其它平台配置，增加了ollama平台相关配置，会话模型用户可根据实际情况自行添加，向量模型目前支持nomic-embed-text（必须升级ollama到0.1.29以上）。
3、因ollama官方只在会话部分对openai api做了兼容，向量api暂未适配，好在langchain官方库支持OllamaEmbeddings，因而在get_Embeddings方法中添加了相关支持代码。

* 修复 pydantic 升级到 v2 后 DocumentWithVsID 和 /v1/embeddings 兼容性问题

---------

Co-authored-by: srszzw <srszzw@163.com>
Co-authored-by: liunux4odoo <liunux@qq.com>

--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -151,7 +151,23 @@ MODEL_PLATFORMS = [
         "image_models": [],
         "multimodal_models": [],
     },
-
+    {
+        "platform_name": "ollama",
+        "platform_type": "ollama",
+        "api_base_url": "http://{host}:{port}/v1",
+        "api_key": "sk-",
+        "api_concurrencies": 5,
+        "llm_models": [
+            # Qwen API,其它更多模型请参考https://ollama.com/library
+            "qwen:7b",
+        ],
+        "embed_models": [
+            # 必须升级ollama到0.1.29以上，低版本向量服务有问题
+            "nomic-embed-text"
+        ],
+        "image_models": [],
+        "multimodal_models": [],
+    },
     # {
     #     "platform_name": "loom",
     #     "platform_type": "loom",
